@@ -3,6 +3,8 @@ Changelog
 
 6.7-dev - (unreleased)
 ----------------------
+* Feature: include option to archive all subobjects/content of folderish object
+  [simiamih #17382]
 
 6.6 - (2013-11-06)
 ------------------
